Added edf_file_extractor function to make it easier to open the edf files.

--- a/Helper_functions.ipynb
+++ b/Helper_functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNi3geGdJvLobGTDn4NhWN2",
+      "authorship_tag": "ABX9TyMXGlvO3NhsZAVpNzrJeGRQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "7KSOUvpRlgmF"
       },
@@ -52,9 +52,46 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def edf_file_extractor(file_path):\n",
+        "  \"\"\"\n",
+        "  Opens an EDF file and returns its contents in the form of a Data Frame\n",
+        "  \"\"\"\n",
+        "  # Load all data\n",
+        "  import pyedflib # Used for edf files\n",
+        "  import pandas as pd\n",
+        "\n",
+        "  # Load the EDF file\n",
+        "  edf = pyedflib.EdfReader(file_path, check_file_size=False)\n",
+        "\n",
+        "  # Extract signal labels\n",
+        "  signal_labels = edf.getSignalLabels()\n",
+        "\n",
+        "  # Extract signal data\n",
+        "  signals = []\n",
+        "  for i in range(edf.signals_in_file):\n",
+        "      signals.append(edf.readSignal(i))\n",
+        "\n",
+        "  # Create a DataFrame\n",
+        "  df = pd.DataFrame(signals).transpose()\n",
+        "  df.columns = signal_labels\n",
+        "\n",
+        "  # Close the EDF file\n",
+        "  edf.close()\n",
+        "\n",
+        "  return df"
+      ],
       "metadata": {
         "id": "0dz3r6aMljmR"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RFd3gWF777Nu"
       },
       "execution_count": null,
       "outputs": []
